🗃️ Committing everything that changed 🗃️
404.html
.claude/settings.local.json
docs/
docs.html

--- a/404.html
+++ b/404.html
@@ -80,13 +80,13 @@
               <a href="docs.html">📚 Documentation</a>
             </li>
             <li style="margin-bottom: var(--space-2);">
-              <a href="privacy.html">🔒 Privacy Policy</a>
+              <a href="../privacy.html">🔒 Privacy Policy</a>
             </li>
             <li style="margin-bottom: var(--space-2);">
-              <a href="security.html">🛡️ Security Information</a>
+              <a href="../security.html">🛡️ Security Information</a>
             </li>
             <li style="margin-bottom: var(--space-2);">
-              <a href="contributing.html">🤝 Contributing Guide</a>
+              <a href="../contributing.html">🤝 Contributing Guide</a>
             </li>
             <li>
               <a href="https://github.com/TabSSH/android">💻 Source Code</a>
