--- a/docs.html
+++ b/docs.html
@@ -169,7 +169,7 @@
           <h4>Community</h4>
           <ul>
             <li><a href="https://github.com/TabSSH/android">GitHub</a></li>
-            <li><a href="contributing.html">Contributing</a></li>
+            <li><a href="../contributing.html">Contributing</a></li>
             <li><a href="https://github.com/TabSSH/android/issues">Issues</a></li>
           </ul>
         </div>
@@ -177,8 +177,8 @@
         <div class="footer-section">
           <h4>Legal</h4>
           <ul>
-            <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="security.html">Security</a></li>
+            <li><a href="../privacy.html">Privacy Policy</a></li>
+            <li><a href="../security.html">Security</a></li>
             <li><a href="https://github.com/TabSSH/android/blob/main/LICENSE">License</a></li>
           </ul>
         </div>
