🗃️ Committing everything that changed 🗃️
404.html
.claude/settings.local.json
contributing.html
css/main.css
docs/architecture.html
docs/basic-usage.html
docs/features.html
docs/first-connection.html
docs/getting-started.html
docs.html
docs/installation.html
docs/port-forwarding.html
docs/security.html
docs/sftp-manager.html
docs/ssh-config.html
docs/ssh-keys.html
docs/tabbed-interface.html
docs/themes.html
docs/troubleshooting.html
download.html
images/
index.html
js/main.js
privacy.html
README.md
security.html
simple-test.html
theme-test.html

--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
   <meta name="description" content="TabSSH's privacy policy - learn how we protect your data and why we collect no personal information. Complete transparency about our privacy practices.">
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="index.html">
-            <img src="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png" alt="TabSSH" class="logo">
+            <img src="images/logo.png" alt="TabSSH" class="logo">
             <span class="brand-text">TabSSH</span>
           </a>
         </div>
