--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
   <meta name="description" content="The page you're looking for doesn't exist. Navigate back to TabSSH documentation or homepage.">
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
   
   <!-- Styles -->
   <link rel="stylesheet" href="css/main.css">
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="index.html">
-            <img src="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png" alt="TabSSH" class="logo">
+            <img src="images/logo.png" alt="TabSSH" class="logo">
             <span class="brand-text">TabSSH</span>
           </a>
         </div>
