--- a/docs.html
+++ b/docs.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Complete documentation for TabSSH - the modern SSH client for Android. Learn how to get started, explore features, and master advanced functionality.">
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="index.html">
-            <img src="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png" alt="TabSSH" class="logo">
+            <img src="images/logo.png" alt="TabSSH" class="logo">
             <span class="brand-text">TabSSH</span>
           </a>
         </div>
