--- a/download.html
+++ b/download.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="SSH, Android, terminal, download, APK, open source, mobile">
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="index.html">
-            <img src="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png" alt="TabSSH" class="logo">
+            <img src="images/logo.png" alt="TabSSH" class="logo">
             <span class="brand-text">TabSSH</span>
           </a>
         </div>
