--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <meta name="twitter:image" content="https://raw.githubusercontent.com/tabssh/assets/main/icons/twitter.png">
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png">
-  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
+  <link rel="apple-touch-icon" href="images/logo.png">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="index.html">
-            <img src="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png" alt="TabSSH" class="logo">
+            <img src="images/logo.png" alt="TabSSH" class="logo">
             <span class="brand-text">TabSSH</span>
           </a>
         </div>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="hero-image">
-          <img src="https://raw.githubusercontent.com/tabssh/assets/main/icons/android.png" alt="TabSSH on Android device" 
+          <img src="images/android.png" alt="TabSSH on Android device" 
                loading="lazy" width="400" height="600">
         </div>
       </div>
