--- a/security.html
+++ b/security.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Learn about TabSSH's security features, best practices, and how we protect your SSH connections and credentials on Android.">
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="index.html">
-            <img src="https://raw.githubusercontent.com/tabssh/assets/main/icons/logo.png" alt="TabSSH" class="logo">
+            <img src="images/logo.png" alt="TabSSH" class="logo">
             <span class="brand-text">TabSSH</span>
           </a>
         </div>
