🗃️ Committing everything that changed 🗃️
.claude/settings.local.json
css/main.css
index.html
js/main.js

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
           <li><a href="download.html">Download</a></li>
           <li><a href="https://github.com/TabSSH/android" target="_blank" rel="noopener">GitHub</a></li>
         </ul>
+        <button class="mobile-menu-toggle" aria-label="Open mobile menu">
+          ☰
+        </button>
+        <nav class="mobile-nav">
+          <ul>
+            <li><a href="docs.html">Docs</a></li>
+            <li><a href="download.html">Download</a></li>
+            <li><a href="https://github.com/TabSSH/android" target="_blank" rel="noopener">GitHub</a></li>
+          </ul>
+        </nav>
       </div>
     </nav>
   </header>
