--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2024 TabSSH. Open-source software under MIT License.</p>
+        <p>&copy; 2024 TabSSH. <a href="LICENSE.md">Website: MIT License</a> | <a href="https://github.com/TabSSH/android/blob/main/LICENSE">App License</a></p>
       </div>
     </div>
   </footer>
