🗃️ Committing everything that changed 🗃️
download.html
index.html
js/main.js

--- a/download.html
+++ b/download.html
@@ -58,9 +58,9 @@
             <p>Download the latest stable version directly from GitHub Releases with verified signatures.</p>
             
             <div style="margin: var(--space-4) 0;">
-              <div style="display: flex; align-items: center; gap: var(--space-3); margin-bottom: var(--space-3);">
+              <div class="latest-version" style="display: flex; align-items: center; gap: var(--space-3); margin-bottom: var(--space-3);">
                 <strong>Latest Version:</strong> 
-                <span class="badge">v1.0.0</span>
+                <span class="badge version-badge">v1.0.0</span>
               </div>
             </div>
             
