--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <div class="download-option">
             <h3>Latest Release</h3>
             <p>Stable build • Multiple architectures</p>
-            <span class="badge">v1.0.0</span>
+            <span class="badge version-badge">v1.0.0</span>
             <div style="margin-top: var(--space-4);">
               <a href="download.html" class="btn btn-primary">Download Now</a>
             </div>
