🗃️ Committing everything that changed 🗃️
download.html
js/main.js
SPEC.md

--- a/download.html
+++ b/download.html
@@ -130,10 +130,13 @@
         <div class="card" style="margin-bottom: var(--space-12);">
           <h2>Coming Soon</h2>
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: var(--space-6);">
-            <div>
+            <div class="fdroid-coming-soon">
               <h4>🏪 F-Droid</h4>
               <p style="font-size: var(--font-size-sm);">
-                We're working on publishing to F-Droid for automatic updates and verified open-source builds.
+                We're working on publishing to F-Droid as <code>io.github.tabssh</code> for automatic updates and verified open-source builds.
+              </p>
+              <p style="font-size: var(--font-size-xs); color: var(--text-secondary); margin-top: var(--space-2);">
+                <strong>Future URL:</strong> https://f-droid.org/packages/io.github.tabssh
               </p>
             </div>
             
