🗃️ Committing everything that changed 🗃️
download.html
js/main.js

--- a/download.html
+++ b/download.html
@@ -137,10 +137,13 @@
               </p>
             </div>
             
-            <div>
+            <div class="playstore-coming-soon">
               <h4>🤖 Google Play Store</h4>
               <p style="font-size: var(--font-size-sm);">
                 Play Store distribution is being evaluated for broader accessibility.
+              </p>
+              <p style="font-size: var(--font-size-xs); color: var(--text-secondary); margin-top: var(--space-2);">
+                <strong>Package ID:</strong> io.github.tabssh
               </p>
             </div>
           </div>
