🗃️ Committing everything that changed 🗃️
docs.html
download.html
index.html
license.html

--- a/docs.html
+++ b/docs.html
@@ -173,13 +173,13 @@
           <ul>
             <li><a href="../privacy.html">Privacy Policy</a></li>
             <li><a href="../security.html">Security</a></li>
-            <li><a href="https://github.com/TabSSH/android/blob/main/LICENSE">License</a></li>
+            <li><a href="https://github.com/TabSSH/android/blob/main/LICENSE.md">License</a></li>
           </ul>
         </div>
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2024 TabSSH. <a href="LICENSE.md">Website: MIT License</a> | <a href="https://github.com/TabSSH/android/blob/main/LICENSE">App License</a></p>
+        <p>&copy; 2024 TabSSH. <a href="license.html">Website: MIT License</a> | <a href="https://github.com/TabSSH/android/blob/main/LICENSE.md">App License</a></p>
       </div>
     </div>
   </footer>
